[package]
name = "futures-io"
version = "0.2.0-alpha"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/futures-rs"
homepage = "https://github.com/alexcrichton/futures-rs"
documentation = "https://docs.rs/futures-io"
description = """
The `AsyncRead` and `AsyncWrite` traits for the futures-rs library.
"""

[features]
std = ["futures-core/std", "futures/std"]
default = ["std"]

[dependencies]
futures-core = { path = "../futures-core", version = "0.2.0-alpha", default-features = false }
iovec = { git = "https://github.com/Nemo157/iovec", branch = "no_std" }

[dev-dependencies]
# https://github.com/rust-lang/cargo/issues/4866
futures = { path = "../futures", version = "0.2.0-alpha", default-features = false }
